Updated the assistant.

--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assistant-02<br/>Assistant Framework\n",
+    "# Assistant-02<br/>Assistant Helper\n",
     "\n",
-    "This notebook showcases a foundational framework to work with Assistants.\n",
+    "This notebook showcases a foundational helper code to work with Assistants.\n",
     "\n",
     "### Get an OpenAI client and an Assistant\n",
     "\n",
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_CXpL4YjWjbtsx4L7Fn8XvmY3 1\n"
+      "Added assistant:  asst_9RZRWmaFQPmXEsAdAjNHSBxo 1\n"
      ]
     }
    ],
@@ -78,30 +78,53 @@
      "output_type": "stream",
      "text": [
       "Creating new thread for John with user_id 123\n",
-      "Added thread:  thread_A0C20mOg3yAuw7b1qFSj6CNb 1\n",
-      "Generated message: 2 + 2 equals 4.\n",
-      "To John: 2 + 2 equals 4.\n",
+      "Added thread:  thread_z9RvfbUdKCwNGOppypc7Tw60 1\n",
+      "User John: What's 2+2\n",
+      "Assistant:\n",
+      "The result of 2+2 is 4.\n",
+      "\n",
+      "\n",
       "Creating new thread for Sarah with user_id 456\n",
-      "Added thread:  thread_e2APAnBw0Q1sVZrz0Kg9vvlB 2\n",
-      "Generated message: The expression \\( x \\cdot x \\) simplifies to \\( x^2 \\).\n",
-      "To Sarah: The expression \\( x \\cdot x \\) simplifies to \\( x^2 \\).\n",
+      "Added thread:  thread_Xd95i62GAXhGcZzQGte8WXD4 2\n",
+      "User Sarah: What's x*x?\n",
+      "Assistant:\n",
+      "To calculate \\( x \\times x \\), I need the value of \\( x \\). Please provide me with the value of \\( x \\) so I can proceed with the calculation.\n",
+      "\n",
+      "\n",
       "Retrieving existing thread for John with user_id 123\n",
-      "Generated message: The value of \\( x \\) for \\( x = m \\cdot y + 5 \\), where \\( y = 2 \\) and \\( m = -10 \\), is \\( -15 \\).\n",
-      "To John: The value of \\( x \\) for \\( x = m \\cdot y + 5 \\), where \\( y = 2 \\) and \\( m = -10 \\), is \\( -15 \\).\n",
+      "User John: What the value of x, for x=m*y+5, if y=2 and m=-10?\n",
+      "Assistant:\n",
+      "The value of x is -15, given that \\( y = 2 \\) and \\( m = -10 \\) in the equation \\( x = m \\cdot y + 5 \\).\n",
+      "\n",
+      "\n",
       "Retrieving existing thread for Sarah with user_id 456\n",
-      "Generated message: The value of \\( y \\) for \\( y = x \\times x \\) when \\( x = 2 \\) is \\( 4 \\).\n",
-      "To Sarah: The value of \\( y \\) for \\( y = x \\times x \\) when \\( x = 2 \\) is \\( 4 \\).\n"
+      "User Sarah: What is the value of y, for y=x*x?, if x=2?\n",
+      "Assistant:\n",
+      "The value of \\( y \\) for \\( y = x \\times x \\) is \\( 4 \\), given that \\( x = 2 \\).\n",
+      "\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('What is the value of y, for y=x*x?, if x=2?',\n",
+       " 'The value of \\\\( y \\\\) for \\\\( y = x \\\\times x \\\\) is \\\\( 4 \\\\), given that \\\\( x = 2 \\\\).')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_message = helper.generate_response(client,math_tutor_assistant,\"What's 2+2\", \"123\", \"John\")\n",
+    "helper.generate_response(client,math_tutor_assistant,\"What's 2+2\", \"123\", \"John\")\n",
     "\n",
-    "new_message = helper.generate_response(client,math_tutor_assistant,\"What's x*x?\", \"456\", \"Sarah\")\n",
+    "helper.generate_response(client,math_tutor_assistant,\"What's x*x?\", \"456\", \"Sarah\")\n",
     "\n",
-    "new_message = helper.generate_response(client,math_tutor_assistant,\"What the value of x, for x=m*y+5, if y=2 and m=-10?\", \"123\", \"John\")\n",
+    "helper.generate_response(client,math_tutor_assistant,\"What the value of x, for x=m*y+5, if y=2 and m=-10?\", \"123\", \"John\")\n",
     "\n",
-    "new_message = helper.generate_response(client,math_tutor_assistant,\"What is the value of y, for y=x*x?, if x=2?\", \"456\", \"Sarah\")"
+    "helper.generate_response(client,math_tutor_assistant,\"What is the value of y, for y=x*x?, if x=2?\", \"456\", \"Sarah\")"
    ]
   },
   {
@@ -120,12 +143,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_Nx0j5U6kuBeCNws6UimFgbyk 2\n"
+      "Added assistant:  asst_mnvRKKFf7lcZyEeXhSQTOPyW 2\n"
      ]
     }
    ],
    "source": [
-    "golang_tutor = helper.create_assistant(client,name=\"Golang\",instructions=\"You are an assistant that can help write and explain Go code.\", model=helper.gpt_deployment_name)"
+    "golang_tutor_assistant = helper.create_assistant(client,name=\"Golang\",instructions=\"You are an assistant that can help write and explain Go code.\", model=helper.gpt_deployment_name)"
    ]
   },
   {
@@ -145,84 +168,85 @@
      "output_type": "stream",
      "text": [
       "Creating new thread for Victor with user_id 789\n",
-      "Added thread:  thread_oGGpegnAtqi5nxJOpItNC5zl 3\n",
-      "Generated message: int(math.Sqrt(float64(num)))\n",
-      "\tfor i := 3; i <= sqrtNum; i += 2 {\n",
-      "\t\tif num%i == 0 {\n",
+      "Added thread:  thread_YBfBfoWgDgTffqi9NliOVR3M 3\n",
+      "User Victor: Write a Go application to find the 1001st prime number.\n",
+      "Assistant:\n",
+      "Certainly! Below is a simple Go program that finds the 1001st prime number by checking each number for primality starting from 2 and continuing until we've found 1001 primes.\n",
+      "\n",
+      "```go\n",
+      "package main\n",
+      "\n",
+      "import (\n",
+      "\t\"fmt\"\n",
+      ")\n",
+      "\n",
+      "func isPrime(number int) bool {\n",
+      "\t// Handle edge cases\n",
+      "\tif number <= 1 {\n",
+      "\t\treturn false\n",
+      "\t}\n",
+      "\tif number == 2 {\n",
+      "\t\treturn true\n",
+      "\t}\n",
+      "\tif number%2 == 0 {\n",
+      "\t\treturn false\n",
+      "\t}\n",
+      "\n",
+      "\t// Check for factors up to the square root of the number\n",
+      "\tfor i := 3; i*i <= number; i += 2 {\n",
+      "\t\tif number%i == 0 {\n",
       "\t\t\treturn false\n",
       "\t\t}\n",
       "\t}\n",
+      "\n",
       "\treturn true\n",
       "}\n",
       "\n",
-      "// findNthPrime finds the nth prime number\n",
       "func findNthPrime(n int) int {\n",
-      "\tcount := 0  // Number of primes found\n",
-      "\tcurrent := 1 // Current number to check\n",
+      "\tcount := 0\n",
+      "\tnumber := 1\n",
       "\n",
+      "\t// Keep generating numbers until we find the nth prime\n",
       "\tfor count < n {\n",
-      "\t\tcurrent++\n",
-      "\t\tif isPrime(current) {\n",
+      "\t\tnumber++\n",
+      "\t\tif isPrime(number) {\n",
       "\t\t\tcount++\n",
       "\t\t}\n",
       "\t}\n",
       "\n",
-      "\treturn current\n",
+      "\treturn number\n",
       "}\n",
       "\n",
       "func main() {\n",
-      "\tnthPrime := 1001\n",
-      "\tprime := findNthPrime(nthPrime)\n",
-      "\tfmt.Printf(\"The %dth prime number is %d\\n\", nthPrime, prime)\n",
+      "\tnumber := findNthPrime(1001)\n",
+      "\tfmt.Printf(\"The 1001st prime number is: %d\\n\", number)\n",
       "}\n",
       "```\n",
       "\n",
-      "The main part of the application is the `findNthPrime` function which keeps looking for prime numbers until it finds the `n`th one. It uses the `isPrime` helper function to determine if a number is a prime.\n",
+      "Here's how to run this program:\n",
+      "1. Save the code to a file named `prime_finder.go`.\n",
+      "2. Open the terminal and navigate to the directory containing the file.\n",
+      "3. Run the command `go run prime_finder.go` to compile and execute the program.\n",
       "\n",
-      "To run this application, save it to a file with a `.go` extension, for example `find_prime.go`, and execute it by running `go run find_prime.go` from your command line in the directory where the file is located.\n",
+      "This program defines two functions: `isPrime`, which checks if a given number is prime, and `findNthPrime`, which finds the nth prime number using the `isPrime` function. The `main` function then finds the 1001st prime and prints it to the console.\n",
       "\n",
-      "The application may take some time to compute the 1001st prime, depending on your system, as it performs a brute-force search for prime numbers.\n",
-      "To Victor: int(math.Sqrt(float64(num)))\n",
-      "\tfor i := 3; i <= sqrtNum; i += 2 {\n",
-      "\t\tif num%i == 0 {\n",
-      "\t\t\treturn false\n",
-      "\t\t}\n",
-      "\t}\n",
-      "\treturn true\n",
-      "}\n",
-      "\n",
-      "// findNthPrime finds the nth prime number\n",
-      "func findNthPrime(n int) int {\n",
-      "\tcount := 0  // Number of primes found\n",
-      "\tcurrent := 1 // Current number to check\n",
-      "\n",
-      "\tfor count < n {\n",
-      "\t\tcurrent++\n",
-      "\t\tif isPrime(current) {\n",
-      "\t\t\tcount++\n",
-      "\t\t}\n",
-      "\t}\n",
-      "\n",
-      "\treturn current\n",
-      "}\n",
-      "\n",
-      "func main() {\n",
-      "\tnthPrime := 1001\n",
-      "\tprime := findNthPrime(nthPrime)\n",
-      "\tfmt.Printf(\"The %dth prime number is %d\\n\", nthPrime, prime)\n",
-      "}\n",
-      "```\n",
-      "\n",
-      "The main part of the application is the `findNthPrime` function which keeps looking for prime numbers until it finds the `n`th one. It uses the `isPrime` helper function to determine if a number is a prime.\n",
-      "\n",
-      "To run this application, save it to a file with a `.go` extension, for example `find_prime.go`, and execute it by running `go run find_prime.go` from your command line in the directory where the file is located.\n",
-      "\n",
-      "The application may take some time to compute the 1001st prime, depending on your system, as it performs a brute-force search for prime numbers.\n"
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('Write a Go application to find the 1001st prime number.',\n",
+       " 'Certainly! Below is a simple Go program that finds the 1001st prime number by checking each number for primality starting from 2 and continuing until we\\'ve found 1001 primes.\\n\\n```go\\npackage main\\n\\nimport (\\n\\t\"fmt\"\\n)\\n\\nfunc isPrime(number int) bool {\\n\\t// Handle edge cases\\n\\tif number <= 1 {\\n\\t\\treturn false\\n\\t}\\n\\tif number == 2 {\\n\\t\\treturn true\\n\\t}\\n\\tif number%2 == 0 {\\n\\t\\treturn false\\n\\t}\\n\\n\\t// Check for factors up to the square root of the number\\n\\tfor i := 3; i*i <= number; i += 2 {\\n\\t\\tif number%i == 0 {\\n\\t\\t\\treturn false\\n\\t\\t}\\n\\t}\\n\\n\\treturn true\\n}\\n\\nfunc findNthPrime(n int) int {\\n\\tcount := 0\\n\\tnumber := 1\\n\\n\\t// Keep generating numbers until we find the nth prime\\n\\tfor count < n {\\n\\t\\tnumber++\\n\\t\\tif isPrime(number) {\\n\\t\\t\\tcount++\\n\\t\\t}\\n\\t}\\n\\n\\treturn number\\n}\\n\\nfunc main() {\\n\\tnumber := findNthPrime(1001)\\n\\tfmt.Printf(\"The 1001st prime number is: %d\\\\n\", number)\\n}\\n```\\n\\nHere\\'s how to run this program:\\n1. Save the code to a file named `prime_finder.go`.\\n2. Open the terminal and navigate to the directory containing the file.\\n3. Run the command `go run prime_finder.go` to compile and execute the program.\\n\\nThis program defines two functions: `isPrime`, which checks if a given number is prime, and `findNthPrime`, which finds the nth prime number using the `isPrime` function. The `main` function then finds the 1001st prime and prints it to the console.')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_message = helper.generate_response(client,golang_tutor,\"Write a Go application to find the 1001st prime number.\", \"789\", \"Victor\")"
+    "helper.generate_response(client,golang_tutor_assistant,\"Write a Go application to find the 1001st prime number.\", \"789\", \"Victor\")"
    ]
   },
   {
@@ -244,12 +268,12 @@
      "output_type": "stream",
      "text": [
       "Deleting:  2  assistants.\n",
-      "AssistantDeleted(id='asst_CXpL4YjWjbtsx4L7Fn8XvmY3', deleted=True, object='assistant.deleted')\n",
-      "AssistantDeleted(id='asst_Nx0j5U6kuBeCNws6UimFgbyk', deleted=True, object='assistant.deleted')\n",
+      "AssistantDeleted(id='asst_9RZRWmaFQPmXEsAdAjNHSBxo', deleted=True, object='assistant.deleted')\n",
+      "AssistantDeleted(id='asst_mnvRKKFf7lcZyEeXhSQTOPyW', deleted=True, object='assistant.deleted')\n",
       "Deleting:  3  threads.\n",
-      "ThreadDeleted(id='thread_A0C20mOg3yAuw7b1qFSj6CNb', deleted=True, object='thread.deleted')\n",
-      "ThreadDeleted(id='thread_e2APAnBw0Q1sVZrz0Kg9vvlB', deleted=True, object='thread.deleted')\n",
-      "ThreadDeleted(id='thread_oGGpegnAtqi5nxJOpItNC5zl', deleted=True, object='thread.deleted')\n",
+      "ThreadDeleted(id='thread_z9RvfbUdKCwNGOppypc7Tw60', deleted=True, object='thread.deleted')\n",
+      "ThreadDeleted(id='thread_Xd95i62GAXhGcZzQGte8WXD4', deleted=True, object='thread.deleted')\n",
+      "ThreadDeleted(id='thread_YBfBfoWgDgTffqi9NliOVR3M', deleted=True, object='thread.deleted')\n",
       "Deleting:  0  files.\n"
      ]
     }
