Updated the assistant.

--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_KJ0leGJW4NZTDIYwogl3IqMK 1\n"
+      "Added assistant:  asst_AJ5ghb5I9q7ZCVnk9WQxxuBJ 1\n"
      ]
     }
    ],
@@ -170,44 +170,37 @@
      "output_type": "stream",
      "text": [
       "Creating new thread for Alex with user_id 123\n",
-      "Added thread:  thread_EOZUA5kiRSWqB5ChzjTGp2gV 1\n",
+      "Added thread:  thread_9nSMq2tnIRvTq2MxeKbnfWQE 1\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_hn9czgizwH5FlUwQdSPkZF4c', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_xJmC530Ap7xMdTYETx214z9y', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_UORd3x2mMWH0JkBn9Lt6FcSn', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_s0xs1PIzYZREvTec3x5mgklO', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
-      "Generated message: The latest closing prices for the stocks are as follows:\n",
+      "User Alex: Can you please provide me the latest stock prices for Microsoft and NVIDIA?\n",
+      "Assistant:\n",
+      "The latest stock prices are as follows:\n",
       "\n",
       "- Microsoft (MSFT): $388.76\n",
-      "- NVIDIA (NVDA): $561.76\n",
+      "- NVIDIA (NVDA): $555.55\n",
       "\n",
-      "Please note that stock prices fluctuate frequently during trading hours. These prices represent the last closing prices.\n",
-      "To Alex: The latest closing prices for the stocks are as follows:\n",
       "\n",
-      "- Microsoft (MSFT): $388.76\n",
-      "- NVIDIA (NVDA): $561.76\n",
-      "\n",
-      "Please note that stock prices fluctuate frequently during trading hours. These prices represent the last closing prices.\n",
       "Retrieving existing thread for Alex with user_id 123\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_cGHAqpz5ZyC8p5in4FCnvQZb', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_yLG8IITvC3xvxFzW7UAMyAlZ', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_yUrd9UATfbdAKVCODfCHsm7t', 'function': {'arguments': '{\"symbol\": \"AAPL\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_sge3c5btsglLlkq9GuXZQaS7', 'function': {'arguments': '{\"symbol\": \"TSLA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
-      "Generated message: The latest closing prices for the stocks are as follows:\n",
+      "User Alex: Can you please provide me the latest stock prices for Apple and Tesla?\n",
+      "Assistant:\n",
+      "The latest stock prices are as follows:\n",
       "\n",
-      "- Apple (AAPL): $182.33\n",
-      "- Tesla (TSLA): $220.13\n",
+      "- Apple (AAPL): $182.05\n",
+      "- Tesla (TSLA): $213.81\n",
       "\n",
-      "As with all stock prices, these are subject to change with market conditions and the time of day. These figures represent the last closing prices.\n",
-      "To Alex: The latest closing prices for the stocks are as follows:\n",
-      "\n",
-      "- Apple (AAPL): $182.33\n",
-      "- Tesla (TSLA): $220.13\n",
-      "\n",
-      "As with all stock prices, these are subject to change with market conditions and the time of day. These figures represent the last closing prices.\n"
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'The latest closing prices for the stocks are as follows:\\n\\n- Apple (AAPL): $182.33\\n- Tesla (TSLA): $220.13\\n\\nAs with all stock prices, these are subject to change with market conditions and the time of day. These figures represent the last closing prices.'"
+       "('Can you please provide me the latest stock prices for Apple and Tesla?',\n",
+       " 'The latest stock prices are as follows:\\n\\n- Apple (AAPL): $182.05\\n- Tesla (TSLA): $213.81')"
       ]
      },
      "execution_count": 6,
@@ -229,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,9 +230,9 @@
      "output_type": "stream",
      "text": [
       "Deleting:  1  assistants.\n",
-      "AssistantDeleted(id='asst_KJ0leGJW4NZTDIYwogl3IqMK', deleted=True, object='assistant.deleted')\n",
+      "AssistantDeleted(id='asst_AJ5ghb5I9q7ZCVnk9WQxxuBJ', deleted=True, object='assistant.deleted')\n",
       "Deleting:  1  threads.\n",
-      "ThreadDeleted(id='thread_EOZUA5kiRSWqB5ChzjTGp2gV', deleted=True, object='thread.deleted')\n",
+      "ThreadDeleted(id='thread_9nSMq2tnIRvTq2MxeKbnfWQE', deleted=True, object='thread.deleted')\n",
       "Deleting:  0  files.\n"
      ]
     }
